# winmine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  winmine.cpp  winmine.h
src/control/: controller.cpp  controller.h
src/lib/: util.cpp  util.h
src/model/: minefield.cpp  minefield.h
src/solver/: solver.cpp  solver.h  solver_helpers.cpp  solver_helpers.h  test_solver.cpp  test_solver_gui.cpp
src/view/: gui.cpp  gui.h
